losovani na tlacitko

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<h1>Výherní čísla</h1>
 		<div id="vyherni-cisla"></div>
 	</div>
-
+  <button onclick="losuj()">Losuj</button>
 	<script src="sportka.js"></script>
 </body>
 </html>
