losovani na tlacitko

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<div class="obsah">
 		<h1>Výherní čísla</h1>
 		<div id="vyherni-cisla"></div>
-	</div>
+  </div>
+  <button onclick="losuj()">Losuj</button>
 	<script src="sportka.js"></script>
 </body>
 </html>
