celkové řešení včetně historie tahů

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
 	<div class="obsah">
+    <button id="losuj" onclick="losuj()">Losuj</button>
 		<h1>Výherní čísla</h1>
 		<div id="vyherni-cisla"></div>
+    <div id="historie-her"></div>
   </div>
-  <button onclick="losuj()">Losuj</button>
+  
+  
 	<script src="sportka.js"></script>
 </body>
 </html>
